tests/should-fail/semantics/wrong-types-in-call.j
native Foo takes integer x, real bla returns nothing


function test takes nothing returns nothing
    call Foo(3.4, "foo" )
endfunction

